# pycppinterface

./: CMakeLists.txt  README.md  requirements.txt
pyderived/: pyproject.toml
pyderived/pyderived/: pyderived.py  test.py
pyinterface/: pyproject.toml
pyinterface/pyinterface/: pyinterface.py
src/: base.cpp  base.h  derived.cpp  derived.h  interface.cpp  myexec.cpp
