[project]
name = "pyderived"
description = "Example class that is used from a CPP library / executable"
version = "0.1.0"
authors = [
    { name = "Alexander Wentz", email = "wentz.alexander@gmail.com" }
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=63.0.0", "wheel"]